# Projet-visualiseur

./: .gitignore  README.md  local.properties  settings.gradle
Carte_de_traitement/: README.md
Gestion_afficheur/: README.md
IHM/: settings.gradle
IHM/app/: build.gradle
IHM/app/src/main/: AndroidManifest.xml
IHM/app/src/main/res/layout/: activity_main.xml  fragment_bluetooth.xml  fragment_lecture__playlist.xml  fragment_palette_de__couleur.xml
IHM/app/src/main/res/values/: strings.xml  themes.xml
IHM/app/src/main/res/values-night/: themes.xml
IHM/gradle/wrapper/: gradle-wrapper.properties
IHM_Android/: README.md
STM32/: CAN.c  CAN.uvguix.Pikachu  CAN.uvoptx  CAN.uvprojx  led.c  led.h  main.c  main.h
STM32/Debug/: CAN.axf  CAN.build_log.htm  CAN.htm  CAN.lnp  CAN.map  CAN_Debug.dep
STM32/RTE/Device/STM32F207IGHx/: RTE_Device.h
STM32/RTE/_Debug/: Pre_Include_Global.h  RTE_Components.h
Test_Lecture_Musique/: settings.gradle
Test_Lecture_Musique/app/: build.gradle
Test_Lecture_Musique/app/src/debug/res/layout/: fragment_home.xml
Test_Lecture_Musique/app/src/main/: AndroidManifest.xml
Test_Lecture_Musique/app/src/main/res/drawable/: ic_baseline_bluetooth_24.xml  (+1 more)
Test_Lecture_Musique/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
raspberry-pi-pico/: CMakeLists.txt  bt.cpp  bt.hpp  led.cpp  led.hpp  main.cpp  passe_bande.c  passe_bande.h
(+29 files in other folders)
